1.1.20-beta
- Fix issue #162: update relink image task to cater encoded/decoded image filename
- Add feature to choose custom color from settings.

1.1.19
- Implement feature #153: clear all bookmark on chapter.
- Fix issue #154: remove '+[] from forbiden char for filename.
- Update css to force fit-to-width for non-thumbnailed image.
- Set useragent for WebView to mobile version.
- Implement feature #152: Add download icon for external page.
- Fix issue #152: Update delete chapter logic for external page.
- Fix issue #155 and #158: fix Update Service.
- Fix issue #157: Update polish translation.
- Fix tab color for alternate language.
- Add Prev/Next button in display image activity.

1.1.18c
- Fix issue #148: relink image on thumb images.
- Fix Issue #147: saving external pages.
- Fix Prev/Next button on external pages.
- Update external page handler to handle redirect on blogspot.
- Fix issue #149: novel cannot be loaded (sqlite exception).
- Fix bookmark scrolling issue, might related to issue #146.

1.1.17b
- Update Free Space checker logic.
- Add context menu on Update History.
- Add DB (SDCard) Access Check logic on Main Activity.
- Fix unhandled exception on AsyncTaskResult, Util.formatDateForDisplay().
- Replace Ignore Cert with Use App Keystore so it will validate the cert.
- Fix Original Novel parser.
- Update Main Parser to use Category:Light_novel_(English).
- Update Prev/Next button handler.
- Update TOC handler to follow show missing/redlink/external settings.
- Fix parseAPI to only set the title if empty.

1.1.16
- Implement quick load on Watched Novels.
- Update parser to handle Special: pages.
- Update handler for keep awake on novel contents.
- Update https handler.
- Update alternate language parser (freedomofkeima).

1.1.15
- Differentiate between Missing chapter (Red) with relink=1 chapter (Pink).
- New Feature for maintenance.
  - Find and Delete Missing Chapter
  - Find and Delete Redlink Chapter
  - Find and Delete Empty Book