@@ -2,7 +2,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.erakk.lnreader"
     android:installLocation="auto"
-    android:versionCode="20140920"
+    android:versionCode="20140922"
     android:versionName="1.1.20-beta1" >
 
     <uses-sdk
