@@ -1,6 +1,9 @@
 1.1.20-beta
 - Fix issue #162: update relink image task to cater encoded/decoded image filename
 - Add feature to choose custom color from settings.
+- Fix issue #160 & #163: Update Text-To-Speech Service binding.
+- Add option to enable Text-To-Speech Service (default is disabled).
+
 
 1.1.19
 - Implement feature #153: clear all bookmark on chapter.
